fix overflow text

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   color: white;
   text-align: right;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .buttons {
